set02/problem03error.txt
problem03.c: In function 'is_composite':
problem03.c:16:26: error: 'count' undeclared (first use in this function)
 for (int i=2; i < n; i < count; i++)
                          ^~~~~
problem03.c:16:26: note: each undeclared identifier is reported only once for each function it appears in
problem03.c:16:31: error: expected ')' before ';' token
 for (int i=2; i < n; i < count; i++)
                               ^
problem03.c: In function 'main':
problem03.c:41:7: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     n=input();
       ^~~~~
problem03.c:43:12: warning: implicit declaration of function 'is_Composite' [-Wimplicit-function-declaration]
     output=is_Composite(n);
            ^~~~~~~~~~~~
problem03.c:43:11: error: lvalue required as left operand of assignment
     output=is_Composite(n);
           ^